Update scripts ref, basic appearance update

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 </head>
@@ -31,12 +32,11 @@
   <!-- Bootstrap core JavaScript
   ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
   <script src="/assets/js/bootstrap-select.min.js"></script>
   <script src="/assets/js/jquery.slicknav.min.js"></script>
   <script src="/assets/js/jquery.countTo.min.js"></script>
   <script src="/assets/js/jquery.shuffle.min.js"></script>
-  <script src="/assets/js/script.js"></script>
+<!--  <script src="/assets/js/script.js"></script>-->
 </body>
 </html>
